# ICrm

./: .gitignore  Makefile  README.md  manage.py  pyproject.toml
core/: forms.py  models.py  urls.py  views.py
core/dto/: __init__.py  developer_request.py
core/flows/: README.md  developer_request.py
core/flows/developer_request/: node_runner.py  spec.py
core/migrations/: 0001_initial.py
core/services/: developer_request.py  flow_process.py  user.py
icrm/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html  index.html  login.html  profile.html
templates/admin/: base_site.html
templates/profiles/: customer.html  developer.html  manager.html
templates/registration/: logged_out.html  login.html
user/: admin.py  models.py
user/dto/: __init__.py  customer.py  delivery_manager.py  developer.py  user.py
user/migrations/: 0001_initial.py  0002_rename_organisation_customer_organization_and_more.py
user/services/: customer.py  delivery_manager.py  developer.py
